# fitsio

./: Cargo.toml  README.md
proptest-regressions/parser/: value.txt
src/: keywords.rs  lib.rs  parser.rs  types.rs
src/parser/: character_string.rs  complex_float.rs  complex_integer.rs  continued_string.rs  data_array.rs  date.rs  header.rs  integer.rs  keyword_record.rs  logical.rs  real.rs  value.rs
src/types/: data_array.rs  header.rs  keyword.rs  keyword_record.rs  value.rs
