[package]
name = "fitsio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
opentelemetry = "0.20.0"
opentelemetry-jaeger = "0.19.0"
opentelemetry-stdout = "0.1.0"
time = { version = "0.3.28", features = ["parsing", "formatting", "large-dates", "macros"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.17"

[dev-dependencies]
proptest = "1.2.0"
