[package]
name = "fitsio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.12.0"
nom = "7.1.3"
png = "0.17.10"
thiserror = "1.0.49"
time = { version = "0.3.28", features = ["parsing", "formatting", "large-dates", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
proptest = "1.2.0"
